TestRepo2/src/objects/Survey_Layout__c.object
<CustomObject>
    <description>Holds the configuration for dynamically rendered survey layouts.</description>
    <fields>
        <fullName>Activate_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this checkbox to activate survey layout and publish survey records to each account.</description>
        <inlineHelpText>Check this checkbox to activate survey layout and publish survey records to each account.</inlineHelpText>
        <label>Activate Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Label_10__c</fullName>
        <description>This field is the label for a Beating The Competition line item.</description>
        <inlineHelpText>This field is the label for a Beating The Competition line item.  Leave this field blank if you do not want it rendered on this survey record.</inlineHelpText>
        <label>Beating Comp Label 10</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Label_1__c</fullName>
        <description>This field is the label for a Beating The Competition line item.</description>
        <inlineHelpText>This field is the label for a Beating The Competition line item.  Leave this field blank if you do not want it rendered on this survey record.</inlineHelpText>
        <label>Beating Comp Label 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Label_2__c</fullName>
        <description>This field is the label for a Beating The Competition line item.</description>
        <inlineHelpText>This field is the label for a Beating The Competition line item.  Leave this field blank if you do not want it rendered on this survey record.</inlineHelpText>
        <label>Beating Comp Label 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Success_Percent_10__c</fullName>
        <label>Beating Comp Success Percent 10</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Success_Percent_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the criteria that determines if the Diageo number and the Total number evaluate to a successful ratio / percentage.  If the label says &apos;&gt;= 35% of Displays,&apos; enter a &apos;35&apos; here.</description>
        <inlineHelpText>This is the criteria that determines if the Diageo number and the Total number evaluate to a successful ratio / percentage.  If the label says &apos;&gt;= 35% of Displays,&apos; enter a &apos;35&apos; here.</inlineHelpText>
        <label>Beating Comp Success Percent 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beating_Comp_Success_Percent_2__c</fullName>
        <label>Beating Comp Success Percent 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clone_Survey_Layout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field used for the survey layout trigger that will clone a survey layout and will also clone copies of the related brand item and brand bottle item layout records.</description>
        <label>Clone Survey Layout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extra_Credit_Label_10__c</fullName>
        <label>Extra Credit Label 10</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Credit_Label_1__c</fullName>
        <label>Extra Credit Label 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Credit_Label_2__c</fullName>
        <label>Extra Credit Label 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_of_Grade_BeatComp__c</fullName>
        <label>Percent of Grade BeatComp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_Grade_Dist__c</fullName>
        <description>This field is used to calculate the percentage of Distrubution/Shelf/Display used for the final Account Grade.</description>
        <label>Percent of Grade Distribution</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_Grade_Extra_Credit__c</fullName>
        <label>Percent of Grade Extra Credit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_Grade_Innovation__c</fullName>
        <label>Percent of Grade Innovation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Layout</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>